# qamar

./: .gitignore  .stylua.toml  .vimrc.lua  CMakeLists.txt  alu_filter  assemble  build.zig  buildos  buildosz  compile_commands.json  corestate.lua  decode.tbl  display.gtkw  neovim.json  out.lxt  qamar.c  qamar_config.h.in  run  runlocal  test.asm  test2.asm  test3.asm  test4.asm  vcd.fst  zrun
lua/: main.lua  qdbg.lua  script.lua  test.lua  test2.lua
lua/digisim/: component.lua  connection.lua  constants.lua  init.lua  library.lua  net.lua  pin.lua  port.lua  pq.lua  signal.lua  simulation.lua  vcd.lua
lua/digisim/simulation/: init.lua
lua/digisim/trace/: vcd.lua
lua/qamar/: config.lua  ffi.lua  init.lua
lua/qamar/lexer/: char_stream.lua  init.lua  types.lua
lua/qamar/lexer/token/: comment.lua  keyword.lua  name.lua  number.lua  string.lua  symbol.lua
lua/qamar/parser/: init.lua  node.lua  node_expression.lua  precedence.lua
lua/qamar/parser/parselet/: atom.lua  functioncall.lua  functiondef.lua  infix.lua  init.lua  nameaccess.lua  prefix.lua  rawaccess.lua  subexpression.lua  tableconstructor.lua
lua/qamar/parser/production/: attnamelist.lua  attrib.lua  block.lua  chunk.lua  explist.lua  expression.lua  fieldlist.lua  funcbody.lua  funcname.lua  label.lua  name.lua  namelist.lua  parlist.lua  retstat.lua  vararg.lua  varlist.lua
lua/qamar/parser/production/field/: name.lua  raw.lua
lua/qamar/parser/production/stat/: assign.lua  break.lua  do.lua  empty.lua  for_iter.lua  for_num.lua  func.lua  functioncall.lua  goto.lua  if.lua  localfunc.lua  localvar.lua  repeat.lua  while.lua
lua/qamar/tokenizer/: char_stream.lua  init.lua  types.lua
lua/qamar/tokenizer/token/: comment.lua  keyword.lua  name.lua  number.lua  string.lua  symbol.lua
lua/qamar/util/: field.lua  string.lua  table.lua
lua/util/string/: boyer-moore.lua  init.lua
os/: build.zig  link.ld  link.lds  main.c  main.c_  main.zig  main.zig_  rsvect.s  string.h
os/stdinclude/: string.h
os/stdlib/: div.S  mulsi3.c  rsvect.s  string.c
src/: qamar.c
src/lexer/: lexer.c  lexer.h  lexer_string.c  lexer_string.h  token_types.h
src/loop/: loop.c  loop.h
src/parser/: char_stream.c  char_stream.h  lexer.c  lexer.h
src/util/: queue_ts.c  queue_ts.h
zigsim/: digisim.zig  idgen.zig  lua.zig  main.lua  main.zig  output.zig  signal.zig  simulation.zig  stringIntern.zig  types.zig
zigsim/comp/: component.zig  net.zig  pin.zig  port.zig  simulation.zig
zigsim/lua/: init.lua  root.lua  system.lua
zigsim/sim/: component.zig  net.zig  pin.zig  port.zig
zigsim/tree/: component.zig  net.zig  pin.zig  port.zig
zigsim/zig-cache/o/2f515b1c4b5fd823e70f4ea00f86c2a5/: builtin.zig  stage1.id
zigsim/zig-cache/o/c0a5fbd6742ab8633a30b9e072eed7a3/: builtin.zig  stage1.id
